<resources>
    <string name="app_name">Esame2017</string>
    <string name="insertOrder">Inserisci ordine</string>
    <string name="updateOrder">Modifica ordine</string>
    <string name="totalOrders">Totale ordini inseriti: %d</string>
    <string name="cancel">Annulla</string>
    <string name="confirm">Conferma</string>
    <string name="back">Indietro</string>
    <string name="date">Data</string>
    <string name="quantity">Quantità</string>
    <string name="price">Importo</string>
    <string name="resetTitle">Azzerare %s?</string>
    <string name="resetMsg">La quantità di %s verrà azzerata</string>
    <string name="deleteTitle">Eliminare %s?</string>
    <string name="deleteMsg">L\'ordine fatta in data %s verrà eliminato</string>
    <string name="totalPrice">TOTALE %f</string>
</resources>
